      handled uniformly.  The variable `vm-imap-server-list' is now obsolete.
      IMAP folders should be specified in the minibuffer using the
      account:mailbox format.  See the info node on IMAP folders.

    * New variable `vm-load-headers-only' to enable headers-only
      downloading of IMAP folders.  (This is still experimental.)

VM 8.0.12-devo

  IMPROVEMENTS:

    * Display version info when calling `vm-version' interactively.  (Thanks
      to Ulrich Mueller)

    * Yanking of messages uses the same MIME decoding as the presentation
      now.  See the new variable `vm-mime-yank-attachments' to configure if
      attachments are also yanked.

    * `u-vm-color.el' is bundled and maintained with VM now.  Ulf Jasper handed
      it over to me as he switched to Gnus.

  BUGFIXES:

    * Detect w3 by using `locate-library' instead of checking for a bound
      `w3-about'. (Thanks to Klaus Straubinger)

    * vm.revno.el was not installed anymore b "make install".  (Thanks to
      Ulrich Mueller for reporting)

    * Insert `emacs-version' instead of creating wrong version string for
      XEmacs, i.e. the patch level was the major version. (Thanks to Stephen
      Turnbull)

    * Correctly locate the data directory for the pixmaps when running as a
      XEmacs package.

    * Check for some MIME character sets that may be available in recent
      XEmacs.  (Thanks to Aidan Kehoe for the patch)

    * Some documentation fixes. (Thanks to Michael Ernst for the patches)

    * Fixed infinite loop in vm-mime-encode-words on XEmacs  21.5-b28.
      (Thanks to Aidan Kehoe for the patch)

    * Detect "score" (additionally to "hits") in "X-Spam-Status:" headers in
      `vm-su-spam-score-aux'. (Patch from Michael Ernst)

    * Typo fix in vm-pcrisis.texinfo. (Patch from Michael Ernst)

    * Header encoding was BASE64 instead of QP by default and it was not
      encoding whole words, but only the 8bit chars instead. (Thanks to Ulrich